2002-03-26  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	fixed detection of fribidi-0.9.0, it is incompatible (not good for us)

2002-03-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/frame.c (frame_update_hidden_window_pos):
	fixed shade/maximize/unshade

	* fvwm/builtins.c (FreeDecorFace):
	fixed memory leak

	* fvwm/borders.c (get_common_decorations):
	(border_get_border_style):
	* fvwm/style.c (parse_and_set_window_style):
	* fvwm/style.h:
	* fvwm/window_flags.h:
	* fvwm/fvwm.h (struct):
	* fvwm/frame.c (frame_mrs_setup_draw_decorations):
	(frame_create_move_resize_args):
	(frame_move_resize_step):
	(frame_next_move_resize_args):
	new styles WindowShadeLazy [default], WindowShadeBusy and
	WindowShadeAlwaysLazy

	* fvwm/frame.c (frame_set_decor_gravities):
	fixed window bit gravities
	split into smaller functions
	(frame_move_resize_step):
	fixed a bug w/ the parent gravity
	(frame_hide_changing_window_parts):
	fixed flickering in one of the corners during shade animation
	(frame_mrs_hide_changing_parts):
	renamed function
	(frame_mrs_prepare_vars):
	(frame_mrs_hide_unhide_parent):
	(frame_mrs_setup_draw_decorations):
	(frame_mrs_resize_move_windows):
	new functions

2002-03-25  olicha  <olivier.chapuis@free.fr>

	* libs/Fft.c (FftSetupEncoding):
	Fixed compilation

	* libs/Flocale.c (FlocaleDrawString):
	* libs/FBidi.c (FBidiConvert):
	* libs/FBidi.h:
	Pass the font to FBidiConvert

	* acconfig.h (HAVE_LIBCHARSET):
	* acinclude.m4 (CHECK_LIBCHARSET):
	* configure.in:
	If libiconv is used check for libcharset

	* libs/Makefile.am:
	* libs/FlocaleCharset.h:
	* libs/FlocaleCharset.c:
	* libs/Flocale.h:
	* libs/Flocale.c (*):
	* libs/Fft.c (FftSetupEncoding):
	* libs/Fft.h:
	New structure FlocaleCharset to handle font, iconv and fribidi charsets.
	FlocaleFont has such a member which is set when charset info are needed.
	FlocaleCharset.c contains a big table which associates to an X charset
	various possible locale charsets and the fribidi charset.